fixing spacing on home page

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -59,7 +59,7 @@
 
     #content-word {
       font-size: 6em;
-      padding-top: 30px;
+      padding-top: 50px;
     }
 
     #code-word {
